# pipeline_eds

./: Dockerfile.dev  pyproject.toml
.github/workflows/: docker.yml
docs/: CHANGELOG.md  rollout_0.3.60.md
scripts/: generate_version.py
src/pipeline_eds/: __init__.py  security_and_config.py
src/pipeline_eds/api/: __init__.py  rjn.py
src/pipeline_eds/api/eds/: __init__.py
src/pipeline_eds/api/eds/soap/: __init__.py  client.py  demo.py
workspaces/eds_to_rjn/code/: aggregator.py
workspaces/eds_to_rjn/scripts/: daemon_runner.py
